--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.0"
+    "react-text-mask": "^5.5.0",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.0",
+    "swiper": "^11.0.3",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
